[package]
name = "inert"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tristanisham/inert"
readme = "readme.md"
description = "A static site generator built in Rust with a focus on quick development time, approachable documentation, and SPEED."
license-file = "LICENSE"
authors = ["Tristan Isham <tristan@isham.co>"]
keywords = ["static_site_generator", "html", "JavaScript", "tailwind", "async"]
categories = ["command-line-utilities", "network-programming", "template-engine", "web-programming", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
pulldown-cmark = "0.9.1"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.80"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.0.1"
actix-files = "0.6.0"
# env_logger = "0.9.0"
termion = "*"
tokio = { version = "1", features = ["full"] }